--- a/static/navbar.css
+++ b/static/navbar.css
@@ -56,7 +56,6 @@ header .title {
   font-size: 16px;
   outline: none;
   cursor: pointer;
-  display: none;
 }
 
 .register {
@@ -64,7 +63,15 @@ header .title {
   color: white;
   font-size: 18px;
 }
-
+.postbtn {
+  padding: 7px 20px;
+  text-decoration: none;
+  background-color: var(--wahd);
+  border-radius: 10px;
+  border: 2px solid white;
+  color: white;
+  font-size: 18px;
+}
 .login {
   padding: 7px 20px;
   text-decoration: none;
