--- a/static/navbar.css
+++ b/static/navbar.css
@@ -46,7 +46,10 @@ header .title {
   display: flex;
   gap: 20px;
 }
-.gap .postbtn {
+.gap .postbtn1 {
+  display: none;
+}
+.gap .postbtn2,.postbtn1 {
   padding: 8px 20px;
   text-decoration: none;
   background-color: var(--wahd);
@@ -56,7 +59,6 @@ header .title {
   font-size: 16px;
   outline: none;
   cursor: pointer;
-  display: none;
 }
 
 .register {
@@ -93,7 +95,7 @@ header form .formlog {
   animation: anim 0.5s linear;
   display: none;
   position: absolute;
-  right: 170px;
+  right: 250px;
   top: 58px;
   margin-top: 10px;
   background-color: rgb(44 48 57);
