handle image errors

--- a/template/home.html
+++ b/template/home.html
@@ -40,7 +40,7 @@
               <input type="file" name="myFile" />
             </div>
             <br />
-            <input type="submit" value="Create Post" class="btnform" /><br />
+            <input type="submit" value="Create Post" class="btnform" id ="buton" /><br />
           </form>
         </div>
         {{end}} {{if .Session}}
@@ -257,6 +257,7 @@
       postToggle.checked = false;
     }
   });
+
 </script>
 
-</html>
+</html>buton
