deseign of upload create post done

--- a/template/home.html
+++ b/template/home.html
@@ -37,7 +37,7 @@
               {{end}}
             </div>
             <div class="upload">
-              <input type="file" name="myFile" />
+              <input type="file" name="myFile" value="Upload an image"/>
             </div>
             <br />
             <input type="submit" value="Create Post" class="btnform" id ="buton" /><br />
