--- a/static/navbar.css
+++ b/static/navbar.css
@@ -8,28 +8,19 @@
   --red: #EB4336;
 }
 header {
-  animation: navbar 1.5s ease-in-out;
   background: #222831;
   z-index: 3;
   position: fixed;
   top: 0;
   width: 100%;
   height: 70px;
-  padding: 15px 250px;
+  padding: 15px 300px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 1px 2px var(--wahd);
 }
-header img {
-  filter: brightness(150%);
-  background-color: #00ffff38;
-  border: 1px solid #1e1e1e6e;
-  width: 33px;
-  height: 33px;
-  border-radius: 50%;
-  cursor: pointer;
-}
+
 
 header .title {
   cursor: pointer;
@@ -85,83 +76,23 @@ header form .formlog {
   border: none;
 }
 
-/* menu dropdown */
 .hidd {
   width: 0;
   height: 0;
   visibility: hidden;
 }
-.dropdown {
-  animation: anim 0.5s linear;
-  display: none;
-  position: absolute;
-  right: 250px;
-  top: 58px;
-  margin-top: 10px;
-  background-color: rgb(44 48 57);
-  color: white;
-  border-radius: 10px;
-  padding: 15px;
-  width: 202px;
-  z-index: 1000;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-.dropdown hr {
-  margin: 10px 0;
-}
-.dropdown strong {
-  width: 160px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: block;
-}
-body:has(#toggle-menu:checked) .dropdown {
-  display: block;
-}
-body:has(#toggle-menu:checked) .allPost {
-  opacity: 0.5;
-}
-/* body:has(#toggle-menu:checked) .postform {
-  display: none;
-} */
-.allPost{
-  opacity: 1;
-}
+
+
 .Btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
+  padding: 8px 5px;
   cursor: pointer;
-  padding: 7px 0;
-  width: 100%;
-  font-size: 17px;
   border-radius: 10px;
-  flex-direction: row-reverse;
-  border: none;
   background-color: #43abb4;
+  border: 2px solid white;
+  width: 45px;
+  height: 40px;
 }
 .Btn svg {
   height: 17px;
   width: 17px;
-}
-.text{
-  color: white;
-}
-@keyframes anim {
-  0% {
-    opacity: 0;
-    transform: translateY(-100px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-
-body:has(#menu-toggle:checked) .filter {
-  display: block;
 }
